style modifications, form verifications added with useform, save before trying yup resolver

--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -19,7 +19,7 @@
     background-color: white;
     width: 300px;
     margin: 0 auto;
-    margin-top: 3rem;
+    //margin-top: 3rem;
     padding: 2rem;
   }
   
