--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@ body {
 
 .main {
   flex: 1;
+  padding: 2rem;
 }
 
 .bg-dark {
@@ -48,4 +49,20 @@ body {
   position: absolute !important;
   width: 1px !important;
   white-space: nowrap !important; /* 3 */
+}
+
+span[role="alert"]{
+  color: red;
+  font-size: 0.5rem;
+}
+
+.edit-button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
+  &:disabled{
+    opacity: 0.5;
+  }
 }
