--- a/src/styles/ProfileHeader.scss
+++ b/src/styles/ProfileHeader.scss
@@ -1,15 +1,49 @@
-.edit-button {
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #fff;
-  font-weight: bold;
-  padding: 10px;
-  &:disabled{
-    opacity: 0.5;
-  }
-}
-  
 .header {
   color: #fff;
   margin-bottom: 2rem;
+  form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+
+.profile-header{
+  &_inputs, &_buttons{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+    button{
+      background-color: aliceblue;
+      border: 0.1rem #2c3e50 solid;
+      border-radius: 0.2rem;
+      color: #2c3e50;
+      font-weight: bold;
+      width: 5rem;
+      padding: 0.5rem 0.5rem;
+      margin: 0.25rem 0.5rem;
+      &:hover, &:focus, &:active{
+          background-color:aquamarine;
+          border: 0.1rem #00bc77 solid;
+      }
+    }
+  }
+  &_input{
+    display: flex;
+    flex-direction: column;
+    input{
+      border: 0.1rem #2c3e50 solid;
+      border-radius: 0.2rem;
+      color: #00bc77;
+      width: auto;
+      padding: 0.5rem 0.5rem;
+      margin: 0.25rem 0.5rem;
+      &:hover, &:focus, &:active{
+          border: 0.1rem #00bc77 solid;
+          background-color: aliceblue;
+      }
+    }
+  }
 }
