--- a/src/styles/TransactionsDropdown.scss
+++ b/src/styles/TransactionsDropdown.scss
@@ -1,12 +1,42 @@
 .transactions-dropdown{
+    font-size: 0.8rem;
     width: 50%;
     text-align: left;
+    label{
+        width: 100%;
+        font-weight: bold;
+    }
     &--type, &--category, &--notes{
         display: flex;
         justify-content: space-between;
         align-items: center;
         &-collapse{
             display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+    }
+}
+
+.transactions form{
+    width: 100%;
+    select{
+        border: 0.1rem #2c3e50 solid;
+        border-radius: 0.2rem;
+        color: #00bc77;
+        width: 100%;
+        padding: 1rem 0;
+        &:hover, &:focus, &:active{
+            border: 0.1rem #00bc77 solid;
+        }
+    }
+    textarea{
+        border: 0.1rem #2c3e50 solid;
+        border-radius: 0.2rem;
+        color: #00bc77;
+        width: 100%;
+        &:hover, &:focus, &:active{
+            border: 0.1rem #00bc77 solid;
         }
     }
 }
